# Programming-and-Processing-GUI-Part-2-Lab1

./: Lab2UML.tex  README.md  UMLLab2AddEnemy.tex  UMLLab3.tex  la1UML.txt
Curse/: CMakeLists.txt  Curse.pro  Makefile  TaskScheduler  UMLDiaram.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  notificationmanager.h  resources.qrc  syncmanager.h  task.h  taskscheduler.cpp  taskscheduler.h  ui_mainwindow.h
Lab1/: Lab1.pro  canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  point2d.cpp  point2d.h  quadrilateral.cpp  quadrilateral.h  square.cpp  square.h  triangle.cpp  triangle.h
Lab2/: Lab2.pro  enemytemplate.cpp  enemytemplate.h  enemytemplatelist.cpp  enemytemplatelist.h  icon.cpp  icon.h  iconlist.cpp  iconlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab3/: Lab3.pro  bignumber.cpp  bignumber.h  enemy.cpp  enemy.h  enemytemplate.cpp  enemytemplate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
